Moves imports to top, fixes alignment issues with icons.

--- a/stylesheets/es-module-view.less
+++ b/stylesheets/es-module-view.less
@@ -53,6 +53,6 @@
 }
 
 .es-ul {
-  margin-left: @component-padding;
+  margin-left: 16px;//@component-padding;
   padding: 0px;
 }
